Added a second "casual" level

--- a/Development/Unreal Project/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/Development/Unreal Project/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -89,18 +89,18 @@ CurrentPosGridSize=8
 CurrentRotGridSize=6
 
 [MRU]
-MRUItem0=/Game/Levels/CasualLevel1
-MRUItem1=/Game/Levels/JoeLevel3
-MRUItem2=/Game/Levels/BaseLevel
-MRUItem3=/Game/Levels/Tutorial2
-MRUItem4=/Game/Levels/JoeLevel1
-MRUItem5=/Game/Levels/Level1
-MRUItem6=/Game/Levels/Level2
-MRUItem7=/Game/Levels/JoeLevel2
-MRUItem8=/Game/Levels/MainMenu
-MRUItem9=/Game/Levels/Tutorial1
-MRUItem10=/Game/Levels/TylerLevel3
-MRUItem11=/Game/Levels/Tutorial3
+MRUItem0=/Game/Levels/CasualLevel2
+MRUItem1=/Game/Levels/CasualLevel1
+MRUItem2=/Game/Levels/JoeLevel3
+MRUItem3=/Game/Levels/BaseLevel
+MRUItem4=/Game/Levels/Tutorial2
+MRUItem5=/Game/Levels/JoeLevel1
+MRUItem6=/Game/Levels/Level1
+MRUItem7=/Game/Levels/Level2
+MRUItem8=/Game/Levels/JoeLevel2
+MRUItem9=/Game/Levels/MainMenu
+MRUItem10=/Game/Levels/Tutorial1
+MRUItem11=/Game/Levels/TylerLevel3
 
 [LevelSequenceEditor SequencerSettings]
 AutoChangeMode=None
@@ -163,7 +163,7 @@ AssetDialog.CurrentViewType=1
 ContentBrowserTab1.SelectedPaths=/Game/Blueprints
 
 [EditorStartup]
-LastLevel=/Game/Levels/CasualLevel1
+LastLevel=/Game/Levels/MainMenu
 
 [AssetEditorManager]
 CleanShutdown=True
@@ -2157,8 +2157,8 @@ SaveGame=
 
 [PlacementMode]
 RecentlyPlaced=/Game/Blueprints/MovementWaypoint.MovementWaypoint;
-RecentlyPlaced=/Game/Blueprints/Tiles/TileSingle.TileSingle;
 RecentlyPlaced=/Game/Blueprints/Target.Target;
+RecentlyPlaced=/Game/Blueprints/Tiles/TileSingle.TileSingle;
 RecentlyPlaced=/Game/Blueprints/Tiles/TileWallSlanted1.TileWallSlanted1;
 RecentlyPlaced=/Game/Blueprints/Tiles/TileWallSlanted2.TileWallSlanted2;
 RecentlyPlaced=/Game/Blueprints/Tiles/TileCorner.TileCorner;
@@ -2193,7 +2193,7 @@ Texture2D.LevelOfDetail=False
 PreviewMaterial.Material=True
 
 [MessageLog]
-LastLogListing=PIE
+LastLogListing=LoadErrors
 
 [RootWindow]
 ScreenPosition=X=427.000 Y=139.000
@@ -2818,7 +2818,7 @@ PrimType=3
 [DetailCustomWidgetExpansion]
 MaterialEditorInstanceConstant=MaterialEditorInstanceConstant.ParameterGroups.Texture Parameter Values,MaterialEditorInstanceConstant.ParameterGroups.Scalar Parameter Values,MaterialEditorInstanceConstant.ParameterGroups.Vector Parameter Values,
 MaterialInstanceConstant=MaterialEditorInstanceConstant.ParameterGroups.Texture Parameter Values,MaterialEditorInstanceConstant.ParameterGroups.Scalar Parameter Values,MaterialEditorInstanceConstant.ParameterGroups.Vector Parameter Values,
-PostProcessVolume=PostProcessVolume.Lens.Lens,PostProcessVolume.Lens.Lens
+PostProcessVolume=PostProcessVolume.Lens.Lens,
 GeneralProjectSettings=InputSettings.Bindings.ActionMappings.Fire,InputSettings.Bindings.ActionMappings,PhysicsSettings.Physical Surface.PhysicalSurfaceList,IOSRuntimeSettings.Build.Remote Build Options,GameMapsSettings.DefaultModes.SelectedGameModeDetails,
 GameplayTagsSettings=InputSettings.Bindings.ActionMappings.Fire,InputSettings.Bindings.ActionMappings,PhysicsSettings.Physical Surface.PhysicalSurfaceList,IOSRuntimeSettings.Build.Remote Build Options,GameMapsSettings.DefaultModes.SelectedGameModeDetails,
 GameplayTagsDeveloperSettings=InputSettings.Bindings.ActionMappings.Fire,InputSettings.Bindings.ActionMappings,PhysicsSettings.Physical Surface.PhysicalSurfaceList,IOSRuntimeSettings.Build.Remote Build Options,GameMapsSettings.DefaultModes.SelectedGameModeDetails,
