Added hard mode button and changed reset button to red

--- a/Development/Unreal Project/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/Development/Unreal Project/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -50,7 +50,7 @@ MultipleInstanceLastWidth=540
 LastExecutedLaunchDevice=WindowsNoEditor@JOSEPH-PC
 LastExecutedLaunchName=JOSEPH-PC
 LastExecutedPIEPreviewDevice=
-NewWindowPosition=(X=685,Y=43)
+NewWindowPosition=(X=685,Y=23)
 NewWindowWidth=540
 NewWindowHeight=960
 StandaloneWindowWidth=540
@@ -89,18 +89,18 @@ CurrentPosGridSize=8
 CurrentRotGridSize=6
 
 [MRU]
-MRUItem0=/Game/Levels/Casual_Levels/CasualLevel12
-MRUItem1=/Game/Levels/Casual_Levels/JoeLevel1
-MRUItem2=/Game/Levels/JoeLevel1
-MRUItem3=/Game/Levels/JoeLevel2
-MRUItem4=/Game/Levels/JoeLevel3
-MRUItem5=/Game/Levels/Level1
-MRUItem6=/Game/Levels/TylerLevel3
-MRUItem7=/Game/Levels/Level2
-MRUItem8=/Game/Levels/Level4
-MRUItem9=/Game/Levels/Level3
-MRUItem10=/Game/Levels/CasualLevel3
-MRUItem11=/Game/Levels/CasualLevel2
+MRUItem0=/Game/Levels/Casual_Levels/CasualLevel7
+MRUItem1=/Game/Levels/Casual_Levels/CasualLevel6
+MRUItem2=/Game/Levels/Casual_Levels/CasualLevel5
+MRUItem3=/Game/Levels/Casual_Levels/CasualLevel1
+MRUItem4=/Game/Levels/Casual_Levels/CasualLevel11
+MRUItem5=/Game/Levels/Casual_Levels/CasualLevel12
+MRUItem6=/Game/Levels/Casual_Levels/CasualLevel2
+MRUItem7=/Game/Levels/TylerLevel3
+MRUItem8=/Game/Levels/TylerLevel1
+MRUItem9=/Game/Levels/Tutorial1
+MRUItem10=/Game/Levels/Tutorial2
+MRUItem11=/Game/Levels/JoeLevel1
 
 [LevelSequenceEditor SequencerSettings]
 AutoChangeMode=None
@@ -163,10 +163,13 @@ AssetDialog.CurrentViewType=1
 ContentBrowserTab1.SelectedPaths=/Game/Levels
 
 [EditorStartup]
-LastLevel=/Game/Levels/Casual_Levels/CasualLevel12
+LastLevel=/Game/Levels/Casual_Levels/CasualLevel7
 
 [AssetEditorManager]
-CleanShutdown=True
+CleanShutdown=False
+OpenAssetsAtExit=/Game/Blueprints/Widgets/OptionsWidget.OptionsWidget
+OpenAssetsAtExit=/Game/Blueprints/BounceSaveGame.BounceSaveGame
+OpenAssetsAtExit=/Game/Blueprints/SettingsInstance.SettingsInstance
 
 [DetailCategories]
 PaperSpriteActor.TransformCommon=True
@@ -2009,7 +2012,7 @@ MeshComponent="\"Object.Collision.BodyInstance\" "
 PrimitiveComponent="\"Object.Particles.InstanceParameters\" "
 SceneComponent="\"Object.Particles.InstanceParameters\" "
 ActorComponent="\"Object.Particles.InstanceParameters\" "
-Object=
+Object="\"Object.Style.WidgetStyle\" \"Object.Style.WidgetStyle.CheckedImage\" \"Object.Style.WidgetStyle.CheckedImage.TintColor\" \"Object.Style.WidgetStyle.CheckedHoveredImage.TintColor\" \"Object.Style.WidgetStyle.CheckedPressedImage\" \"Object.Style.WidgetStyle.CheckedPressedImage.TintColor\" \"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
 StaticMeshActor=
 2DSideScrollerCharacter_C=
 PaperCharacter=
@@ -2022,10 +2025,10 @@ EndUserSettings="\"Object.Privacy.bSendAnonymousUsageDataToEpic\" "
 EditorLoadingSavingSettings="\"Object.AutoReimport\" \"Object.Blueprints\" \"Object.AutoSave\" "
 LevelEditorViewportSettings="\"Object.GridSnapping.DecimalGridSizes\" "
 AnalyticsPrivacySettings="\"Object.Options.bSendUsageData\" "
-TextBlock="\"Object.Appearance.ColorAndOpacity\" \"Object.Appearance.Font\" \"Object.Appearance.Font.OutlineSettings\" \"Object.Layout.Slot\" \"Object.Layout.Slot.Object.Layout.Layout"
-TextLayoutWidget="\"Object.Appearance.ColorAndOpacity\" \"Object.Appearance.Font\" \"Object.Appearance.Font.OutlineSettings\" \"Object.Layout.Slot\" \"Object.Layout.Slot.Object.Layout.Layout"
-Widget="\"Object.Appearance.WidgetStyle\" \"Object.Appearance.WidgetStyle.Normal\" \"Object.Appearance.WidgetStyle.Normal.Margin\" \"Object.Appearance.WidgetStyle.Hovered\" \"Object.Appearance.WidgetStyle.Hovered.Margin\" \"Object.Appearance.WidgetStyle.Hovered.TintColor\" \"Object.Appearance.WidgetStyle.Pressed\" \"Object.Appearance.WidgetStyle.Pressed.Margin\" \"Object.Appearance.WidgetStyle.Pressed.TintColor\" \"Object.Appearance.WidgetStyle.Disabled\" \"Object.Appearance.WidgetStyle.Disabled.TintColor\" \"Object.Appearance.ColorAndOpacity\" \"Object.Appearance.BackgroundColor\" \"Object.Layout.Slot\" \"Object.Layout.Slot.Object.Layout.Layout"
-Visual="\"Object.Appearance.WidgetStyle\" \"Object.Appearance.WidgetStyle.Normal\" \"Object.Appearance.WidgetStyle.Normal.Margin\" \"Object.Appearance.WidgetStyle.Hovered\" \"Object.Appearance.WidgetStyle.Hovered.Margin\" \"Object.Appearance.WidgetStyle.Hovered.TintColor\" \"Object.Appearance.WidgetStyle.Pressed\" \"Object.Appearance.WidgetStyle.Pressed.Margin\" \"Object.Appearance.WidgetStyle.Pressed.TintColor\" \"Object.Appearance.WidgetStyle.Disabled\" \"Object.Appearance.WidgetStyle.Disabled.TintColor\" \"Object.Appearance.ColorAndOpacity\" \"Object.Appearance.BackgroundColor\" \"Object.Layout.Slot\" \"Object.Layout.Slot.Object.Layout.Layout"
+TextBlock="\"Object.Appearance.ColorAndOpacity\" \"Object.Appearance.Font\" \"Object.Appearance.Font.OutlineSettings\" \"Object.Layout.Slot\" "
+TextLayoutWidget="\"Object.Appearance.ColorAndOpacity\" \"Object.Appearance.Font\" \"Object.Appearance.Font.OutlineSettings\" \"Object.Layout.Slot\" "
+Widget="\"Object.Style.WidgetStyle\" \"Object.Style.WidgetStyle.CheckedImage\" \"Object.Style.WidgetStyle.CheckedImage.TintColor\" \"Object.Style.WidgetStyle.CheckedHoveredImage.TintColor\" \"Object.Style.WidgetStyle.CheckedPressedImage\" \"Object.Style.WidgetStyle.CheckedPressedImage.TintColor\" \"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
+Visual="\"Object.Style.WidgetStyle\" \"Object.Style.WidgetStyle.CheckedImage\" \"Object.Style.WidgetStyle.CheckedImage.TintColor\" \"Object.Style.WidgetStyle.CheckedHoveredImage.TintColor\" \"Object.Style.WidgetStyle.CheckedPressedImage\" \"Object.Style.WidgetStyle.CheckedPressedImage.TintColor\" \"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
 HUD_C="\"Object.Appearance.ColorAndOpacity\" \"Object.Render Transform.RenderTransform\" "
 UserWidget="\"Object.Appearance.ColorAndOpacity\" \"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
 PaperTileSet="\"Object.TileSet.AdditionalSourceTextures\" \"Object.Sprite.PerTileData.PerTileData[0]\" \"Object.Sprite.PerTileData.PerTileData[1]\" \"Object.Sprite.PerTileData.PerTileData[2]\" \"Object.Sprite.PerTileData.PerTileData[3]\" \"Object.Sprite.PerTileData.PerTileData[4]\" \"Object.Sprite.PerTileData.PerTileData[5]\" \"Object.Sprite.PerTileData.PerTileData[6]\" \"Object.Sprite.PerTileData.PerTileData[7]\" \"Object.Sprite.PerTileData.PerTileData[8]\" \"Object.Sprite.PerTileData.PerTileData[9]\" \"Object.Sprite.PerTileData.PerTileData[10]\" \"Object.Sprite.PerTileData.PerTileData[11]\" \"Object.Sprite.PerTileData.PerTileData[12]\" \"Object.Sprite.PerTileData.PerTileData[13]\" \"Object.Sprite.PerTileData.PerTileData[14]\" \"Object.Sprite.PerTileData.PerTileData[15]\" \"Object.Sprite.PerTileData.PerTileData[16]\" \"Object.Sprite.PerTileData.PerTileData[17]\" \"Object.Sprite.PerTileData.PerTileData[20]\" \"Object.Sprite.PerTileData.PerTileData[21]\" \"Object.Sprite.PerTileData.PerTileData[22]\" \"Object.Sprite.PerTileData.PerTileData[23]\" \"Object.Sprite.PerTileData.PerTileData[24]\" "
@@ -2055,18 +2058,18 @@ LevelSequenceEditorSettings="\"Object.Tracks.TrackSettings\" \"Object.Tracks.Tra
 PaperSpriteComponent="\"Object.Collision.BodyInstance\" "
 Image="\"Object.Appearance.Brush\" \"Object.Appearance.ColorAndOpacity\" \"Object.Layout.Slot\" \"Object.Layout.Slot.Object.Layout.Layout"
 CanvasPanel="\"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
-PanelWidget="\"Object.Appearance.WidgetStyle\" \"Object.Appearance.WidgetStyle.Normal\" \"Object.Appearance.WidgetStyle.Normal.Margin\" \"Object.Appearance.WidgetStyle.Hovered\" \"Object.Appearance.WidgetStyle.Hovered.Margin\" \"Object.Appearance.WidgetStyle.Hovered.TintColor\" \"Object.Appearance.WidgetStyle.Pressed\" \"Object.Appearance.WidgetStyle.Pressed.Margin\" \"Object.Appearance.WidgetStyle.Pressed.TintColor\" \"Object.Appearance.WidgetStyle.Disabled\" \"Object.Appearance.WidgetStyle.Disabled.TintColor\" \"Object.Appearance.ColorAndOpacity\" \"Object.Appearance.BackgroundColor\" \"Object.Layout.Slot\" \"Object.Layout.Slot.Object.Layout.Layout"
+PanelWidget="\"Object.Style.WidgetStyle\" \"Object.Style.WidgetStyle.CheckedImage\" \"Object.Style.WidgetStyle.CheckedImage.TintColor\" \"Object.Style.WidgetStyle.CheckedHoveredImage.TintColor\" \"Object.Style.WidgetStyle.CheckedPressedImage\" \"Object.Style.WidgetStyle.CheckedPressedImage.TintColor\" \"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
 Cannon_C=
 LevelButtonWidget_C=
 MultiLineEditableTextBox="\"Object.Render Transform.RenderTransform\" "
 EditableTextBox="\"Object.Render Transform.RenderTransform\" "
-Button="\"Object.Appearance.WidgetStyle\" \"Object.Appearance.WidgetStyle.Normal\" \"Object.Appearance.WidgetStyle.Normal.Margin\" \"Object.Appearance.WidgetStyle.Hovered\" \"Object.Appearance.WidgetStyle.Hovered.Margin\" \"Object.Appearance.WidgetStyle.Hovered.TintColor\" \"Object.Appearance.WidgetStyle.Pressed\" \"Object.Appearance.WidgetStyle.Pressed.Margin\" \"Object.Appearance.WidgetStyle.Pressed.TintColor\" \"Object.Appearance.WidgetStyle.Disabled\" \"Object.Appearance.WidgetStyle.Disabled.TintColor\" \"Object.Appearance.ColorAndOpacity\" \"Object.Appearance.BackgroundColor\" \"Object.Layout.Slot\" \"Object.Layout.Slot.Object.Layout.Layout"
-ContentWidget="\"Object.Appearance.WidgetStyle\" \"Object.Appearance.WidgetStyle.Normal\" \"Object.Appearance.WidgetStyle.Normal.Margin\" \"Object.Appearance.WidgetStyle.Hovered\" \"Object.Appearance.WidgetStyle.Hovered.Margin\" \"Object.Appearance.WidgetStyle.Hovered.TintColor\" \"Object.Appearance.WidgetStyle.Pressed\" \"Object.Appearance.WidgetStyle.Pressed.Margin\" \"Object.Appearance.WidgetStyle.Pressed.TintColor\" \"Object.Appearance.WidgetStyle.Disabled\" \"Object.Appearance.WidgetStyle.Disabled.TintColor\" \"Object.Appearance.ColorAndOpacity\" \"Object.Appearance.BackgroundColor\" \"Object.Layout.Slot\" \"Object.Layout.Slot.Object.Layout.Layout"
+Button="\"Object.Appearance.WidgetStyle\" \"Object.Appearance.WidgetStyle.Normal\" \"Object.Appearance.WidgetStyle.Normal.Margin\" \"Object.Appearance.WidgetStyle.Hovered\" \"Object.Appearance.WidgetStyle.Hovered.Margin\" \"Object.Appearance.WidgetStyle.Hovered.TintColor\" \"Object.Appearance.WidgetStyle.Pressed\" \"Object.Appearance.WidgetStyle.Pressed.Margin\" \"Object.Appearance.WidgetStyle.Pressed.TintColor\" \"Object.Appearance.WidgetStyle.Disabled\" \"Object.Appearance.WidgetStyle.Disabled.TintColor\" \"Object.Appearance.ColorAndOpacity\" \"Object.Appearance.BackgroundColor\" \"Object.Layout.Slot\" "
+ContentWidget="\"Object.Style.WidgetStyle\" \"Object.Style.WidgetStyle.CheckedImage\" \"Object.Style.WidgetStyle.CheckedImage.TintColor\" \"Object.Style.WidgetStyle.CheckedHoveredImage.TintColor\" \"Object.Style.WidgetStyle.CheckedPressedImage\" \"Object.Style.WidgetStyle.CheckedPressedImage.TintColor\" \"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
 PaperSprite="\"Object.Rendering.RenderGeometry\" \"Object.Rendering.RenderGeometry.Shapes\" \"Object.Rendering.RenderGeometry.Shapes.Shapes[0]\" \"Object.Rendering.RenderGeometry.Shapes.Shapes[0].Vertices\" \"Object.Collision.CollisionGeometry\" \"Object.Collision.CollisionGeometry.Shapes\" \"Object.Collision.CollisionGeometry.Shapes.Shapes[0]\" \"Object.Collision.CollisionGeometry.Shapes.Shapes[0].Vertices\" "
 BackgroundWidget_C=
 WidgetSwitcher="\"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
 MainMenuWidget_C="\"Object.Appearance.ColorAndOpacity\" \"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
-OptionsWidget_C="\"Object.DefaultUnlocked\" \"Object.DefaultUnlocked\" "
+OptionsWidget_C="\"Object.Appearance.ColorAndOpacity\" \"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
 LevelSelectWidget_C="\"Object.Appearance.ColorAndOpacity\" \"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
 HelpWidget_C="\"Object.Appearance.ColorAndOpacity\" \"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
 TileBlueprint_C="\"Object.Default.Waypoints\" "
@@ -2107,7 +2110,7 @@ ParticleModuleVelocityCone="\"Object.Cone.Angle\" \"Object.Cone.Angle.Distributi
 GameOverScreenWidget_C="\"Object.Appearance.ColorAndOpacity\" \"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
 ParticleModuleRequired="\"Object.Emitter.EmitterRotation\" "
 ParticleModuleAccelerationOverLifetime="\"Object.Acceleration.AccelOverLife\" \"Object.Acceleration.AccelOverLife.Distribution\" "
-CheckBox="\"Object.Style.WidgetStyle\" \"Object.Style.WidgetStyle.CheckedImage\" \"Object.Style.WidgetStyle.CheckedImage.TintColor\" \"Object.Style.WidgetStyle.CheckedHoveredImage.TintColor\" \"Object.Style.WidgetStyle.CheckedPressedImage\" \"Object.Style.WidgetStyle.CheckedPressedImage.TintColor\" \"Object.Layout.Slot\" \"Object.Layout.Slot.Object.Layout.Layout"
+CheckBox="\"Object.Style.WidgetStyle\" \"Object.Style.WidgetStyle.CheckedImage\" \"Object.Style.WidgetStyle.CheckedImage.TintColor\" \"Object.Style.WidgetStyle.CheckedHoveredImage.TintColor\" \"Object.Style.WidgetStyle.CheckedPressedImage\" \"Object.Style.WidgetStyle.CheckedPressedImage.TintColor\" \"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
 TargetCameraShake_C="\"Object.Oscillation.RotOscillation\" \"Object.Oscillation.RotOscillation.Pitch\" \"Object.Oscillation.RotOscillation.Yaw\" \"Object.Oscillation.RotOscillation.Roll\" "
 CameraShake="\"Object.Oscillation.RotOscillation\" \"Object.Oscillation.RotOscillation.Pitch\" \"Object.Oscillation.RotOscillation.Yaw\" \"Object.Oscillation.RotOscillation.Roll\" "
 ParticleModuleTrailSource="\"Object.Source.SourceStrength.Distribution\" "
@@ -2154,6 +2157,8 @@ Slider="\"Object.Style.WidgetStyle\" \"Object.Style.WidgetStyle.DisabledBarImage
 Throbber="\"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
 BounceSaveGame_C=
 SaveGame=
+SettingsInstance_C="\"Object.VibrationEnabled\" \"Object.VibrationEnabled\" "
+GameInstance="\"Object.VibrationEnabled\" \"Object.VibrationEnabled\" "
 
 [PlacementMode]
 RecentlyPlaced=/Game/Blueprints/Target.Target;
@@ -2875,11 +2880,11 @@ WmfMediaSettings=InputSettings.Bindings.ActionMappings.Fire,InputSettings.Bindin
 SphereComponent=SphereComponent.Physics.ConstraintsGroup,
 ArrayProperty=ArrayProperty.DefaultValueCategory.None,
 Cannon_C=ArrayProperty.DefaultValueCategory.None,K2Node_VariableGet.DefaultValueCategory.None,
-K2Node_VariableGet=ArrayProperty.DefaultValueCategory.None,K2Node_VariableGet.DefaultValueCategory.None,K2Node_VariableSet.DefaultValueCategory.None,
+K2Node_VariableGet=ArrayProperty.DefaultValueCategory.None,K2Node_VariableGet.DefaultValueCategory.None,
 FloatProperty=
 LevelButtonWidget_C=ArrayProperty.DefaultValueCategory.None,K2Node_VariableGet.DefaultValueCategory.None,
 IntProperty=ArrayProperty.DefaultValueCategory.None,K2Node_VariableGet.DefaultValueCategory.None,
-K2Node_VariableSet=ArrayProperty.DefaultValueCategory.None,K2Node_VariableGet.DefaultValueCategory.None,K2Node_VariableSet.DefaultValueCategory.None,
+K2Node_VariableSet=
 TileBlueprint_C=ArrayProperty.DefaultValueCategory.None,IntProperty.DefaultValueCategory.None,
 ObjectProperty=ArrayProperty.DefaultValueCategory.None,K2Node_VariableGet.DefaultValueCategory.None,
 BoolProperty=
