--- a/Development/Unreal Project/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/Development/Unreal Project/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -89,18 +89,18 @@ CurrentPosGridSize=8
 CurrentRotGridSize=6
 
 [MRU]
-MRUItem0=/Game/Levels/Casual_Levels/CasualLevel7
-MRUItem1=/Game/Levels/Casual_Levels/CasualLevel6
+MRUItem0=/Game/Levels/Casual_Levels/CasualLevel1
+MRUItem1=/Game/Levels/Casual_Levels/CasualLeve10
 MRUItem2=/Game/Levels/Casual_Levels/CasualLevel5
-MRUItem3=/Game/Levels/Casual_Levels/CasualLevel1
-MRUItem4=/Game/Levels/Casual_Levels/CasualLevel11
-MRUItem5=/Game/Levels/Casual_Levels/CasualLevel12
-MRUItem6=/Game/Levels/Casual_Levels/CasualLevel2
-MRUItem7=/Game/Levels/TylerLevel3
-MRUItem8=/Game/Levels/TylerLevel1
-MRUItem9=/Game/Levels/Tutorial1
-MRUItem10=/Game/Levels/Tutorial2
-MRUItem11=/Game/Levels/JoeLevel1
+MRUItem3=/Game/Levels/Casual_Levels/CasualLevel2
+MRUItem4=/Game/Levels/Casual_Levels/CasualLevel3
+MRUItem5=/Game/Levels/Casual_Levels/CasualLevel9
+MRUItem6=/Game/Levels/Level4
+MRUItem7=/Game/Levels/Casual_Levels/CasualLevel4
+MRUItem8=/Game/Levels/Level3
+MRUItem9=/Game/Levels/JoeLevel3
+MRUItem10=/Game/Levels/Level5
+MRUItem11=/Game/Levels/Casual_Levels/CasualLevel12
 
 [LevelSequenceEditor SequencerSettings]
 AutoChangeMode=None
@@ -163,13 +163,11 @@ AssetDialog.CurrentViewType=1
 ContentBrowserTab1.SelectedPaths=/Game/Levels
 
 [EditorStartup]
-LastLevel=/Game/Levels/Casual_Levels/CasualLevel7
+LastLevel=/Game/Levels/Casual_Levels/CasualLevel1
 
 [AssetEditorManager]
 CleanShutdown=False
-OpenAssetsAtExit=/Game/Blueprints/Widgets/OptionsWidget.OptionsWidget
-OpenAssetsAtExit=/Game/Blueprints/BounceSaveGame.BounceSaveGame
-OpenAssetsAtExit=/Game/Blueprints/SettingsInstance.SettingsInstance
+OpenAssetsAtExit=/Game/Blueprints/BounceGamemode.BounceGamemode
 
 [DetailCategories]
 PaperSpriteActor.TransformCommon=True
@@ -1909,7 +1907,7 @@ BounceSaveGame_C.Default=True
 /Game/Blueprints/Tiles/SlowBlock.SlowBlock=1
 /Game/Blueprints/Widgets/HelpWidget.HelpWidget=0
 /Game/Blueprints/Widgets/MainMenuWidget.MainMenuWidget=0
-/Game/Blueprints/Widgets/LevelButtonWidget.LevelButtonWidget=1
+/Game/Blueprints/Widgets/LevelButtonWidget.LevelButtonWidget=0
 /Game/Blueprints/Widgets/HUD.HUD=0
 /Game/Blueprints/Widgets/LevelSelectWidget.LevelSelectWidget=0
 /Game/Blueprints/Widgets/OptionsWidget.OptionsWidget=0
@@ -2004,7 +2002,7 @@ BounceSaveGame_C.Default=True
 /Game/Sprites/CannonTexture2_Sprite.CannonTexture2_Sprite=1
 /Game/Audio/Laser_Groove.Laser_Groove=0
 /Game/Blueprints/Widgets/PauseWidget.PauseWidget=0
-/Game/Blueprints/BounceSaveGame.BounceSaveGame=1
+/Game/Blueprints/BounceSaveGame.BounceSaveGame=0
 
 [DetailPropertyExpansion]
 StaticMeshComponent="\"Object.Collision.BodyInstance\" "
@@ -2012,7 +2010,7 @@ MeshComponent="\"Object.Collision.BodyInstance\" "
 PrimitiveComponent="\"Object.Particles.InstanceParameters\" "
 SceneComponent="\"Object.Particles.InstanceParameters\" "
 ActorComponent="\"Object.Particles.InstanceParameters\" "
-Object="\"Object.Style.WidgetStyle\" \"Object.Style.WidgetStyle.CheckedImage\" \"Object.Style.WidgetStyle.CheckedImage.TintColor\" \"Object.Style.WidgetStyle.CheckedHoveredImage.TintColor\" \"Object.Style.WidgetStyle.CheckedPressedImage\" \"Object.Style.WidgetStyle.CheckedPressedImage.TintColor\" \"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
+Object="\"Object.Appearance.ColorAndOpacity\" \"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
 StaticMeshActor=
 2DSideScrollerCharacter_C=
 PaperCharacter=
@@ -2025,10 +2023,10 @@ EndUserSettings="\"Object.Privacy.bSendAnonymousUsageDataToEpic\" "
 EditorLoadingSavingSettings="\"Object.AutoReimport\" \"Object.Blueprints\" \"Object.AutoSave\" "
 LevelEditorViewportSettings="\"Object.GridSnapping.DecimalGridSizes\" "
 AnalyticsPrivacySettings="\"Object.Options.bSendUsageData\" "
-TextBlock="\"Object.Appearance.ColorAndOpacity\" \"Object.Appearance.Font\" \"Object.Appearance.Font.OutlineSettings\" \"Object.Layout.Slot\" "
-TextLayoutWidget="\"Object.Appearance.ColorAndOpacity\" \"Object.Appearance.Font\" \"Object.Appearance.Font.OutlineSettings\" \"Object.Layout.Slot\" "
-Widget="\"Object.Style.WidgetStyle\" \"Object.Style.WidgetStyle.CheckedImage\" \"Object.Style.WidgetStyle.CheckedImage.TintColor\" \"Object.Style.WidgetStyle.CheckedHoveredImage.TintColor\" \"Object.Style.WidgetStyle.CheckedPressedImage\" \"Object.Style.WidgetStyle.CheckedPressedImage.TintColor\" \"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
-Visual="\"Object.Style.WidgetStyle\" \"Object.Style.WidgetStyle.CheckedImage\" \"Object.Style.WidgetStyle.CheckedImage.TintColor\" \"Object.Style.WidgetStyle.CheckedHoveredImage.TintColor\" \"Object.Style.WidgetStyle.CheckedPressedImage\" \"Object.Style.WidgetStyle.CheckedPressedImage.TintColor\" \"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
+TextBlock="\"Object.Appearance.ColorAndOpacity\" \"Object.Appearance.Font\" \"Object.Appearance.Font.OutlineSettings\" \"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
+TextLayoutWidget="\"Object.Appearance.ColorAndOpacity\" \"Object.Appearance.Font\" \"Object.Appearance.Font.OutlineSettings\" \"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
+Widget="\"Object.Appearance.ColorAndOpacity\" \"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
+Visual="\"Object.Appearance.ColorAndOpacity\" \"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
 HUD_C="\"Object.Appearance.ColorAndOpacity\" \"Object.Render Transform.RenderTransform\" "
 UserWidget="\"Object.Appearance.ColorAndOpacity\" \"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
 PaperTileSet="\"Object.TileSet.AdditionalSourceTextures\" \"Object.Sprite.PerTileData.PerTileData[0]\" \"Object.Sprite.PerTileData.PerTileData[1]\" \"Object.Sprite.PerTileData.PerTileData[2]\" \"Object.Sprite.PerTileData.PerTileData[3]\" \"Object.Sprite.PerTileData.PerTileData[4]\" \"Object.Sprite.PerTileData.PerTileData[5]\" \"Object.Sprite.PerTileData.PerTileData[6]\" \"Object.Sprite.PerTileData.PerTileData[7]\" \"Object.Sprite.PerTileData.PerTileData[8]\" \"Object.Sprite.PerTileData.PerTileData[9]\" \"Object.Sprite.PerTileData.PerTileData[10]\" \"Object.Sprite.PerTileData.PerTileData[11]\" \"Object.Sprite.PerTileData.PerTileData[12]\" \"Object.Sprite.PerTileData.PerTileData[13]\" \"Object.Sprite.PerTileData.PerTileData[14]\" \"Object.Sprite.PerTileData.PerTileData[15]\" \"Object.Sprite.PerTileData.PerTileData[16]\" \"Object.Sprite.PerTileData.PerTileData[17]\" \"Object.Sprite.PerTileData.PerTileData[20]\" \"Object.Sprite.PerTileData.PerTileData[21]\" \"Object.Sprite.PerTileData.PerTileData[22]\" \"Object.Sprite.PerTileData.PerTileData[23]\" \"Object.Sprite.PerTileData.PerTileData[24]\" "
@@ -2060,7 +2058,7 @@ Image="\"Object.Appearance.Brush\" \"Object.Appearance.ColorAndOpacity\" \"Objec
 CanvasPanel="\"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
 PanelWidget="\"Object.Style.WidgetStyle\" \"Object.Style.WidgetStyle.CheckedImage\" \"Object.Style.WidgetStyle.CheckedImage.TintColor\" \"Object.Style.WidgetStyle.CheckedHoveredImage.TintColor\" \"Object.Style.WidgetStyle.CheckedPressedImage\" \"Object.Style.WidgetStyle.CheckedPressedImage.TintColor\" \"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
 Cannon_C=
-LevelButtonWidget_C=
+LevelButtonWidget_C="\"Object.Appearance.ColorAndOpacity\" \"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
 MultiLineEditableTextBox="\"Object.Render Transform.RenderTransform\" "
 EditableTextBox="\"Object.Render Transform.RenderTransform\" "
 Button="\"Object.Appearance.WidgetStyle\" \"Object.Appearance.WidgetStyle.Normal\" \"Object.Appearance.WidgetStyle.Normal.Margin\" \"Object.Appearance.WidgetStyle.Hovered\" \"Object.Appearance.WidgetStyle.Hovered.Margin\" \"Object.Appearance.WidgetStyle.Hovered.TintColor\" \"Object.Appearance.WidgetStyle.Pressed\" \"Object.Appearance.WidgetStyle.Pressed.Margin\" \"Object.Appearance.WidgetStyle.Pressed.TintColor\" \"Object.Appearance.WidgetStyle.Disabled\" \"Object.Appearance.WidgetStyle.Disabled.TintColor\" \"Object.Appearance.ColorAndOpacity\" \"Object.Appearance.BackgroundColor\" \"Object.Layout.Slot\" "
@@ -2069,15 +2067,15 @@ PaperSprite="\"Object.Rendering.RenderGeometry\" \"Object.Rendering.RenderGeomet
 BackgroundWidget_C=
 WidgetSwitcher="\"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
 MainMenuWidget_C="\"Object.Appearance.ColorAndOpacity\" \"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
-OptionsWidget_C="\"Object.Appearance.ColorAndOpacity\" \"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
+OptionsWidget_C="\"Object.DefaultUnlocked\" \"Object.DefaultUnlocked\" "
 LevelSelectWidget_C="\"Object.Appearance.ColorAndOpacity\" \"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
 HelpWidget_C="\"Object.Appearance.ColorAndOpacity\" \"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
 TileBlueprint_C="\"Object.Default.Waypoints\" "
 Bullet_C=
 ProgressBar="\"Object.Render Transform.RenderTransform\" "
 TimerWidget_C="\"Object.Render Transform.RenderTransform\" "
-GameModeBase=
-Info=
+GameModeBase="\"Object.EasyLevels\" \"Object.EasyLevels\" "
+Info="\"Object.EasyLevels\" \"Object.EasyLevels\" "
 HUDWidget_C="\"Object.Appearance.ColorAndOpacity\" \"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
 GeometryCacheComponent="\"Object.Collision.BodyInstance\" "
 NewTarget_C=
@@ -2116,7 +2114,7 @@ CameraShake="\"Object.Oscillation.RotOscillation\" \"Object.Oscillation.RotOscil
 ParticleModuleTrailSource="\"Object.Source.SourceStrength.Distribution\" "
 ParticleModuleTrailBase="\"Object.Source.SourceStrength.Distribution\" "
 ParticleModuleSpawnPerUnit="\"Object.Spawn.SpawnPerUnit\" \"Object.Spawn.SpawnPerUnit.Distribution\" "
-BounceGamemode_C=
+BounceGamemode_C="\"Object.EasyLevels\" \"Object.EasyLevels\" "
 TileDoubleWall_C="\"Object.Default.Waypoints\" "
 TileEnd_C="\"Object.Default.Waypoints\" "
 TileWall_C="\"Object.Default.Waypoints\" "
@@ -2155,10 +2153,10 @@ Border="\"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
 HorizontalBox="\"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
 Slider="\"Object.Style.WidgetStyle\" \"Object.Style.WidgetStyle.DisabledBarImage\" \"Object.Style.WidgetStyle.DisabledBarImage.TintColor\" \"Object.Style.WidgetStyle.NormalThumbImage.TintColor\" \"Object.Style.WidgetStyle.DisabledThumbImage.TintColor\" \"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
 Throbber="\"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
-BounceSaveGame_C=
-SaveGame=
-SettingsInstance_C="\"Object.VibrationEnabled\" \"Object.VibrationEnabled\" "
-GameInstance="\"Object.VibrationEnabled\" \"Object.VibrationEnabled\" "
+BounceSaveGame_C="\"Object.HardEnabled\" \"Object.HardEnabled\" "
+SaveGame="\"Object.HardEnabled\" \"Object.HardEnabled\" "
+SettingsInstance_C="\"Object.HardEnabled\" \"Object.HardEnabled\" "
+GameInstance="\"Object.HardEnabled\" \"Object.HardEnabled\" "
 
 [PlacementMode]
 RecentlyPlaced=/Game/Blueprints/Target.Target;
@@ -2198,7 +2196,7 @@ Texture2D.LevelOfDetail=False
 PreviewMaterial.Material=True
 
 [MessageLog]
-LastLogListing=LoadErrors
+LastLogListing=PIE
 
 [RootWindow]
 ScreenPosition=X=302.000 Y=96.000
@@ -2878,13 +2876,13 @@ TcpMessagingSettings=InputSettings.Bindings.ActionMappings.Fire,InputSettings.Bi
 UdpMessagingSettings=InputSettings.Bindings.ActionMappings.Fire,InputSettings.Bindings.ActionMappings,PhysicsSettings.Physical Surface.PhysicalSurfaceList,IOSRuntimeSettings.Build.Remote Build Options,GameMapsSettings.DefaultModes.SelectedGameModeDetails,
 WmfMediaSettings=InputSettings.Bindings.ActionMappings.Fire,InputSettings.Bindings.ActionMappings,PhysicsSettings.Physical Surface.PhysicalSurfaceList,IOSRuntimeSettings.Build.Remote Build Options,GameMapsSettings.DefaultModes.SelectedGameModeDetails,
 SphereComponent=SphereComponent.Physics.ConstraintsGroup,
-ArrayProperty=ArrayProperty.DefaultValueCategory.None,
+ArrayProperty=ArrayProperty.DefaultValueCategory.None,K2Node_VariableGet.DefaultValueCategory.None,
 Cannon_C=ArrayProperty.DefaultValueCategory.None,K2Node_VariableGet.DefaultValueCategory.None,
-K2Node_VariableGet=ArrayProperty.DefaultValueCategory.None,K2Node_VariableGet.DefaultValueCategory.None,
+K2Node_VariableGet=
 FloatProperty=
 LevelButtonWidget_C=ArrayProperty.DefaultValueCategory.None,K2Node_VariableGet.DefaultValueCategory.None,
 IntProperty=ArrayProperty.DefaultValueCategory.None,K2Node_VariableGet.DefaultValueCategory.None,
-K2Node_VariableSet=
+K2Node_VariableSet=ArrayProperty.DefaultValueCategory.None,K2Node_VariableGet.DefaultValueCategory.None,K2Node_VariableSet.DefaultValueCategory.None,
 TileBlueprint_C=ArrayProperty.DefaultValueCategory.None,IntProperty.DefaultValueCategory.None,
 ObjectProperty=ArrayProperty.DefaultValueCategory.None,K2Node_VariableGet.DefaultValueCategory.None,
 BoolProperty=
