--- a/Development/Unreal Project/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/Development/Unreal Project/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -89,18 +89,18 @@ CurrentPosGridSize=8
 CurrentRotGridSize=6
 
 [MRU]
-MRUItem0=/Game/Levels/Casual_Levels/CasualLevel1
-MRUItem1=/Game/Levels/Casual_Levels/CasualLeve10
-MRUItem2=/Game/Levels/Casual_Levels/CasualLevel5
-MRUItem3=/Game/Levels/Casual_Levels/CasualLevel2
-MRUItem4=/Game/Levels/Casual_Levels/CasualLevel3
-MRUItem5=/Game/Levels/Casual_Levels/CasualLevel9
-MRUItem6=/Game/Levels/Level4
-MRUItem7=/Game/Levels/Casual_Levels/CasualLevel4
-MRUItem8=/Game/Levels/Level3
-MRUItem9=/Game/Levels/JoeLevel3
-MRUItem10=/Game/Levels/Level5
-MRUItem11=/Game/Levels/Casual_Levels/CasualLevel12
+MRUItem0=/Game/Levels/Level1
+MRUItem1=/Game/Levels/CasualLevel2
+MRUItem2=/Game/Levels/CasualLevel1
+MRUItem3=/Game/Levels/TylerLevel3
+MRUItem4=/Game/Levels/Tutorial2
+MRUItem5=/Game/Levels/Tutorial1
+MRUItem6=/Game/Levels/Level2
+MRUItem7=/Game/Levels/Level3
+MRUItem8=/Game/Levels/Level5
+MRUItem9=/Game/Levels/Level4
+MRUItem10=/Game/Levels/Casual_Levels/CasualLevel1
+MRUItem11=/Game/Levels/Casual_Levels/CasualLeve10
 
 [LevelSequenceEditor SequencerSettings]
 AutoChangeMode=None
@@ -160,14 +160,13 @@ ContentBrowserTab1.ThumbnailSizeScale=0.180000
 ContentBrowserTab1.CurrentViewType=1
 AssetDialog.ThumbnailSizeScale=0.100000
 AssetDialog.CurrentViewType=1
-ContentBrowserTab1.SelectedPaths=/Game/Levels
+ContentBrowserTab1.SelectedPaths=/Game/Blueprints/Tiles
 
 [EditorStartup]
-LastLevel=/Game/Levels/Casual_Levels/CasualLevel1
+LastLevel=/Game/Levels/Level1
 
 [AssetEditorManager]
-CleanShutdown=False
-OpenAssetsAtExit=/Game/Blueprints/BounceGamemode.BounceGamemode
+CleanShutdown=True
 
 [DetailCategories]
 PaperSpriteActor.TransformCommon=True
@@ -2075,7 +2074,7 @@ Bullet_C=
 ProgressBar="\"Object.Render Transform.RenderTransform\" "
 TimerWidget_C="\"Object.Render Transform.RenderTransform\" "
 GameModeBase="\"Object.EasyLevels\" \"Object.EasyLevels\" "
-Info="\"Object.EasyLevels\" \"Object.EasyLevels\" "
+Info=
 HUDWidget_C="\"Object.Appearance.ColorAndOpacity\" \"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
 GeometryCacheComponent="\"Object.Collision.BodyInstance\" "
 NewTarget_C=
@@ -2201,7 +2200,7 @@ LastLogListing=PIE
 [RootWindow]
 ScreenPosition=X=302.000 Y=96.000
 WindowSize=X=850.000 Y=702.000
-InitiallyMaximized=False
+InitiallyMaximized=True
 
 [SlateAdditionalLayoutConfig]
 Viewport 1.LayoutType=FourPanes2x2
@@ -2217,11 +2216,11 @@ FourPanes2x2.Viewport 1.bIsMaximized=True
 FourPanes2x2.Viewport 1.MaximizedViewport=FourPanes2x2.Viewport 1.Viewport1
 
 [Directories2]
-UNR=../../../../../../MGP Group 11/mgp-mgp-group-11/Development/Unreal Project/Content/Levels/Casual_Levels
+UNR=../../../../../../Users/Tyler/Documents/GitHub/mgp-mgp-group-11/Development/Unreal Project/Content/Levels
 BRUSH=../../../../../../Users/Joseph/Desktop/Unreal Projects/Prototype_Group_11/Content/
 FBX=../../../../../../Users/Joseph/Desktop/Unreal Projects/Prototype_Group_11/Content/
 FBXAnim=../../../../../../Users/Joseph/Desktop/Unreal Projects/Prototype_Group_11/Content/
-GenericImport=../../../../../../Users/Tyler/Desktop/274751__kwahmah-02__glass-bowl-1.wav
+GenericImport=../../../../../../Users/Tyler/Desktop/ResetButton.png
 GenericExport=../../../../../../Users/Tyler/Desktop/Background.TGA
 GenericOpen=../../../../../../Users/Joseph/Desktop/Unreal Projects/Prototype_Group_11/Content/
 GenericSave=../../../../../../Users/Joseph/Desktop/Unreal Projects/Prototype_Group_11/Content/
@@ -2785,8 +2784,8 @@ Cascade.TimeStamp=2017.10.01-15.07.25
 Cascade.LastCompileMethod=External
 DistCurveEditor.TimeStamp=2017.10.01-15.07.28
 DistCurveEditor.LastCompileMethod=External
-SynthBenchmark.TimeStamp=2017.09.26-10.10.47
-SynthBenchmark.LastCompileMethod=Unknown
+SynthBenchmark.TimeStamp=2017.10.01-15.07.42
+SynthBenchmark.LastCompileMethod=External
 NewLevelDialog.TimeStamp=2017.09.26-10.10.42
 NewLevelDialog.LastCompileMethod=Unknown
 
