Fixed crash when loading level 8, corrected casual level order

--- a/Development/Unreal Project/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/Development/Unreal Project/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -50,7 +50,7 @@ MultipleInstanceLastWidth=540
 LastExecutedLaunchDevice=WindowsNoEditor@JOSEPH-PC
 LastExecutedLaunchName=JOSEPH-PC
 LastExecutedPIEPreviewDevice=
-NewWindowPosition=(X=685,Y=23)
+NewWindowPosition=(X=685,Y=28)
 NewWindowWidth=540
 NewWindowHeight=960
 StandaloneWindowWidth=540
@@ -89,18 +89,18 @@ CurrentPosGridSize=8
 CurrentRotGridSize=6
 
 [MRU]
-MRUItem0=/Game/Levels/Level1
-MRUItem1=/Game/Levels/CasualLevel2
-MRUItem2=/Game/Levels/CasualLevel1
-MRUItem3=/Game/Levels/TylerLevel3
-MRUItem4=/Game/Levels/Tutorial2
-MRUItem5=/Game/Levels/Tutorial1
-MRUItem6=/Game/Levels/Level2
-MRUItem7=/Game/Levels/Level3
-MRUItem8=/Game/Levels/Level5
-MRUItem9=/Game/Levels/Level4
-MRUItem10=/Game/Levels/Casual_Levels/CasualLevel1
-MRUItem11=/Game/Levels/Casual_Levels/CasualLeve10
+MRUItem0=/Game/Levels/MainMenu
+MRUItem1=/Game/Levels/Casual_Levels/CasualLevel3
+MRUItem2=/Game/Levels/Casual_Levels/CasualLevel11
+MRUItem3=/Game/Levels/Casual_Levels/CasualLevel12
+MRUItem4=/Game/Levels/Casual_Levels/CasualLevel1
+MRUItem5=/Game/Levels/Casual_Levels/CasualLeve10
+MRUItem6=/Game/Levels/Casual_Levels/CasualLevel9
+MRUItem7=/Game/Levels/Casual_Levels/CasualLevel8
+MRUItem8=/Game/Levels/Casual_Levels/CasualLevel7
+MRUItem9=/Game/Levels/Casual_Levels/CasualLevel6
+MRUItem10=/Game/Levels/Casual_Levels/CasualLevel5
+MRUItem11=/Game/Levels/Casual_Levels/CasualLevel4
 
 [LevelSequenceEditor SequencerSettings]
 AutoChangeMode=None
@@ -163,10 +163,11 @@ AssetDialog.CurrentViewType=1
 ContentBrowserTab1.SelectedPaths=/Game/Blueprints/Tiles
 
 [EditorStartup]
-LastLevel=/Game/Levels/Level1
+LastLevel=/Game/Levels/MainMenu
 
 [AssetEditorManager]
-CleanShutdown=True
+CleanShutdown=False
+OpenAssetsAtExit=/Game/Blueprints/BounceGamemode.BounceGamemode
 
 [DetailCategories]
 PaperSpriteActor.TransformCommon=True
@@ -2073,7 +2074,7 @@ TileBlueprint_C="\"Object.Default.Waypoints\" "
 Bullet_C=
 ProgressBar="\"Object.Render Transform.RenderTransform\" "
 TimerWidget_C="\"Object.Render Transform.RenderTransform\" "
-GameModeBase="\"Object.EasyLevels\" \"Object.EasyLevels\" "
+GameModeBase=
 Info=
 HUDWidget_C="\"Object.Appearance.ColorAndOpacity\" \"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
 GeometryCacheComponent="\"Object.Collision.BodyInstance\" "
@@ -2113,7 +2114,7 @@ CameraShake="\"Object.Oscillation.RotOscillation\" \"Object.Oscillation.RotOscil
 ParticleModuleTrailSource="\"Object.Source.SourceStrength.Distribution\" "
 ParticleModuleTrailBase="\"Object.Source.SourceStrength.Distribution\" "
 ParticleModuleSpawnPerUnit="\"Object.Spawn.SpawnPerUnit\" \"Object.Spawn.SpawnPerUnit.Distribution\" "
-BounceGamemode_C="\"Object.EasyLevels\" \"Object.EasyLevels\" "
+BounceGamemode_C=
 TileDoubleWall_C="\"Object.Default.Waypoints\" "
 TileEnd_C="\"Object.Default.Waypoints\" "
 TileWall_C="\"Object.Default.Waypoints\" "
@@ -2152,10 +2153,10 @@ Border="\"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
 HorizontalBox="\"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
 Slider="\"Object.Style.WidgetStyle\" \"Object.Style.WidgetStyle.DisabledBarImage\" \"Object.Style.WidgetStyle.DisabledBarImage.TintColor\" \"Object.Style.WidgetStyle.NormalThumbImage.TintColor\" \"Object.Style.WidgetStyle.DisabledThumbImage.TintColor\" \"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
 Throbber="\"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
-BounceSaveGame_C="\"Object.HardEnabled\" \"Object.HardEnabled\" "
-SaveGame="\"Object.HardEnabled\" \"Object.HardEnabled\" "
-SettingsInstance_C="\"Object.HardEnabled\" \"Object.HardEnabled\" "
-GameInstance="\"Object.HardEnabled\" \"Object.HardEnabled\" "
+BounceSaveGame_C=
+SaveGame=
+SettingsInstance_C=
+GameInstance=
 
 [PlacementMode]
 RecentlyPlaced=/Game/Blueprints/Target.Target;
@@ -2195,7 +2196,7 @@ Texture2D.LevelOfDetail=False
 PreviewMaterial.Material=True
 
 [MessageLog]
-LastLogListing=PIE
+LastLogListing=LoadErrors
 
 [RootWindow]
 ScreenPosition=X=302.000 Y=96.000
@@ -2883,7 +2884,7 @@ LevelButtonWidget_C=ArrayProperty.DefaultValueCategory.None,K2Node_VariableGet.D
 IntProperty=ArrayProperty.DefaultValueCategory.None,K2Node_VariableGet.DefaultValueCategory.None,
 K2Node_VariableSet=ArrayProperty.DefaultValueCategory.None,K2Node_VariableGet.DefaultValueCategory.None,K2Node_VariableSet.DefaultValueCategory.None,
 TileBlueprint_C=ArrayProperty.DefaultValueCategory.None,IntProperty.DefaultValueCategory.None,
-ObjectProperty=ArrayProperty.DefaultValueCategory.None,K2Node_VariableGet.DefaultValueCategory.None,
+ObjectProperty=
 BoolProperty=
 NewTarget_C=
 BounceGamemode_C=ArrayProperty.DefaultValueCategory.None,K2Node_VariableGet.DefaultValueCategory.None,
