--- a/Development/Unreal Project/Saved/Config/Windows/Engine.ini
+++ b/Development/Unreal Project/Saved/Config/Windows/Engine.ini
@@ -17,4 +17,18 @@ TunnelMulticastEndpoint=
 [/Script/UnrealEd.EditorEngine]
 FlipNormalMapGreenChannel=False
 
+[/Script/AndroidPlatformEditor.AndroidSDKSettings]
+SDKPath=(Path="")
+NDKPath=(Path="")
+ANTPath=(Path="")
+JavaPath=(Path="")
+
+[WindowsApplication.Accessibility]
+StickyKeysHotkey=False
+ToggleKeysHotkey=False
+FilterKeysHotkey=False
+StickyKeysConfirmation=False
+ToggleKeysConfirmation=False
+FilterKeysConfirmation=False
+
 
